# fastapi-users-mongodb-boilerplate

./: pyproject.toml
app/: app.py  db.py  settings.py
app/manager/: users.py
app/routes/: __init__.py
app/routes/auth/: __init__.py  jwt.py
app/routes/users/: __init__.py
