[tool.poetry]
name = "new-fastapi"
version = "0.1.0"
description = ""
authors = ["baseplate-admin <61817579+baseplate-admin@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "new_fastapi"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.89.1"
fastapi-users = {extras = ["beanie"], version = "^10.3.0"}
uvicorn = {extras = ["standard"], version = "^0.20.0"}


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
